--- a/style/global.scss
+++ b/style/global.scss
@@ -4,6 +4,14 @@ $primary-color: #f5f5f5;
 $secondary-color: #ffffff;
 
 $font-color: #212121;
+$font-color-opacity-80: rgba(
+  $color: #212121,
+  $alpha: 0.8,
+);
+$font-color-opacity-60: rgba(
+  $color: #212121,
+  $alpha: 0.6,
+);
 
 $links-color-hover: #616161;
 
@@ -35,10 +43,40 @@ $p-subheading: 1.6rem;
 
 // Styles
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style-type: none;
+}
+
 html {
   font-size: 62.5%;
 }
 
 body {
   background-color: $primary-color;
+  font-family: "Libre Baskerville", Helvetica, sans-serif;
+}
+
+a {
+  text-decoration: none;
+  color: $font-color;
+  &:hover {
+    color: $links-color-hover;
+  }
+}
+
+input {
+  font-size: $nav-font;
+}
+
+::placeholder {
+  font-family: "Libre Baskerville", Helvetica, sans-serif;
+  color: $font-color-opacity-60;
+  opacity: 1; /* Firefox changes the opacity on the placeholder, so we change it back. */
+}
+
+.hidden {
+  display: none;
 }
