--- a/style/style.css
+++ b/style/style.css
@@ -77,9 +77,23 @@ header .logo-search-container {
   justify-content: space-between;
   flex-direction: row;
 }
-header img {
+header .logo-desktop {
   width: 16.3rem;
   height: 4.4rem;
+}
+header .logo-desktop img {
+  width: 100%;
+  height: 100%;
+}
+header .logo-mobile {
+  margin-top: 0.2rem;
+  width: 4rem;
+  height: 4.8rem;
+  display: none;
+}
+header .logo-mobile img {
+  width: 100%;
+  height: 100%;
 }
 header form {
   position: relative;
@@ -108,6 +122,9 @@ header form:hover ::-moz-placeholder {
 header form:hover ::placeholder {
   color: rgba(33, 33, 33, 0.8);
 }
+header form.inside-nav {
+  display: none;
+}
 header nav {
   width: 35rem;
 }
@@ -122,7 +139,6 @@ header .sveriges-godaste-hamburgare {
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  width: 16.4rem;
   padding: 2rem 0;
   display: none;
 }
@@ -188,10 +204,13 @@ header .sveriges-godaste-hamburgare:hover .menu {
   header nav ul {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
     flex-direction: column;
-    height: 25rem;
+    height: 45rem;
     background-color: #ffffff;
+  }
+  header nav ul li {
+    margin: 3rem 0;
   }
   header nav.showNavbarAnimation {
     animation: showNavbar 0.5s;
@@ -204,6 +223,27 @@ header .sveriges-godaste-hamburgare:hover .menu {
   }
   header .sveriges-godaste-hamburgare {
     display: flex;
+  }
+}
+@media screen and (max-width: 640px) {
+  header form.outside-nav {
+    display: none;
+  }
+  header form.inside-nav {
+    display: block;
+    margin: 3rem 0;
+  }
+  header form.inside-nav input {
+    width: 25rem;
+    background-color: #f5f5f5;
+  }
+}
+@media screen and (max-width: 480px) {
+  header .logo-desktop {
+    display: none;
+  }
+  header .logo-mobile {
+    display: block;
   }
 }
 @keyframes showNavbar {
