--- a/style/_global.scss
+++ b/style/_global.scss
@@ -17,7 +17,7 @@ $links-color-hover: #616161;
 
 $button-add-to-cart-color: #095741;
 
-// Variables - Font sizes
+// Variables - Desktop Font sizes
 
 $h1-font: 4.8rem;
 $h1-subheading-font: 2.4rem;
@@ -33,6 +33,11 @@ $p-font: 1.8rem;
 $p-subheading: 1.6rem;
 
 $button-font: 2rem;
+
+// Variables - Mobile Font sizes
+
+$h1-mobile-font: calc($h1-font - 2.2rem);
+$h1-mobile-subheading-font: calc($h1-subheading-font - 0.6rem);
 
 // Functions
 
@@ -59,6 +64,15 @@ html {
 body {
   background-color: $primary-color;
   font-family: "Libre Baskerville", Helvetica, sans-serif;
+}
+
+h1 {
+  font-size: $h1-font;
+  font-weight: 400;
+}
+
+p.subheading {
+  font-size: $h1-subheading-font;
 }
 
 a {
@@ -90,4 +104,21 @@ button {
 
 .hidden {
   display: none !important;
+}
+
+span.divider {
+  display: block;
+  width: 3rem;
+  height: 0.2rem;
+  background-color: $font-color;
+  margin: 2rem 0;
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: $h1-mobile-font;
+  }
+  p.subheading {
+    font-size: $h1-mobile-subheading-font;
+  }
 }
