--- a/style/style.css
+++ b/style/style.css
@@ -14,6 +14,15 @@ body {
   font-family: "Libre Baskerville", Helvetica, sans-serif;
 }
 
+h1 {
+  font-size: 4.8rem;
+  font-weight: 400;
+}
+
+p.subheading {
+  font-size: 2.4rem;
+}
+
 a {
   text-decoration: none;
   color: #212121;
@@ -51,6 +60,74 @@ button {
   display: none !important;
 }
 
+span.divider {
+  display: block;
+  width: 3rem;
+  height: 0.2rem;
+  background-color: #212121;
+  margin: 2rem 0;
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 2.6rem;
+  }
+  p.subheading {
+    font-size: 1.8rem;
+  }
+}
+main.startsida {
+  width: 125rem;
+  margin: auto;
+}
+main.startsida .banner-wrapper {
+  width: 100%;
+  height: 30.1rem;
+  margin: auto;
+  margin-bottom: 4rem;
+}
+main.startsida .banner-wrapper img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+main.startsida section.landing-page {
+  display: flex;
+  align-items: center;
+  justify-content: normal;
+  flex-direction: column;
+}
+main.startsida section.landing-page .headline {
+  display: flex;
+  align-items: center;
+  justify-content: normal;
+  flex-direction: column;
+  text-align: center;
+}
+
+@media screen and (max-width: 1250px) {
+  main.startsida {
+    width: 100%;
+  }
+  main.startsida .banner-wrapper {
+    height: calc(20rem + 8vw);
+  }
+  main.startsida section.landing-page {
+    padding: 0 5rem;
+  }
+}
+@media screen and (max-width: 480px) {
+  main.startsida .banner-wrapper {
+    width: 39rem;
+    height: 9.4rem;
+  }
+}
+@media screen and (max-width: 390px) {
+  main.startsida .banner-wrapper {
+    width: 100%;
+  }
+}
 header {
   display: flex;
   align-items: normal;
@@ -70,6 +147,7 @@ header .header-content {
   margin: auto;
   background-color: #f5f5f5;
   min-height: 10vh;
+  padding: 2rem 0;
 }
 header .logo-search-container {
   display: flex;
