--- a/style/_global.scss
+++ b/style/_global.scss
@@ -30,7 +30,7 @@ $nav-font: 2rem;
 $footer-font: 2rem;
 
 $p-font: 1.8rem;
-$p-subheading: 1.6rem;
+$p-subheading-font: 1.6rem;
 
 $button-font: 2rem;
 
@@ -39,6 +39,11 @@ $button-font: 2rem;
 $h1-mobile-font: calc($h1-font - 2.2rem);
 $h1-mobile-subheading-font: calc($h1-subheading-font - 0.6rem);
 
+$h2-mobile-font: calc($h2-font - 0.8rem);
+
+$p-mobile-font: calc($p-font - 0.2rem);
+$p-mobile-subheading-font: calc($p-subheading-font - 0.2rem);
+
 // Functions
 
 @mixin flex($align, $justify, $direction) {
@@ -46,6 +51,23 @@ $h1-mobile-subheading-font: calc($h1-subheading-font - 0.6rem);
   align-items: $align;
   justify-content: $justify;
   flex-direction: $direction;
+}
+
+@mixin grid(
+  $rows: null,
+  $columns: null,
+  $gap: null,
+  $justify: null,
+  $row-gap: null,
+  $column-gap: null
+) {
+  display: grid;
+  gap: $gap;
+  row-gap: $row-gap;
+  column-gap: $column-gap;
+  grid-template-rows: $rows;
+  grid-template-columns: $columns;
+  justify-content: $justify;
 }
 
 // Styles
@@ -75,9 +97,21 @@ p.subheading {
   font-size: $h1-subheading-font;
 }
 
+h2 {
+  font-size: $h2-font;
+  font-weight: 400;
+}
+
+p {
+  font-size: $p-font;
+}
+
 a {
   text-decoration: none;
   color: $font-color;
+}
+
+a.link {
   &:hover {
     color: $links-color-hover;
   }
@@ -118,7 +152,13 @@ span.divider {
   h1 {
     font-size: $h1-mobile-font;
   }
+  p {
+    font-size: $p-mobile-font;
+  }
   p.subheading {
     font-size: $h1-mobile-subheading-font;
+  }
+  h2 {
+    font-size: $h2-mobile-font;
   }
 }
