--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,14 @@ h2 {
   font-weight: 400;
 }
 
+p.h2-subheading {
+  font-size: 2rem;
+}
+
+h3 {
+  font-size: 1.8rem;
+}
+
 p {
   font-size: 1.8rem;
 }
@@ -78,6 +86,10 @@ span.divider {
   margin: 2rem 0;
 }
 
+img {
+  display: block;
+}
+
 @media screen and (max-width: 480px) {
   h1 {
     font-size: 2.6rem;
@@ -90,6 +102,12 @@ span.divider {
   }
   h2 {
     font-size: 2.4rem;
+  }
+  p.h2-subheading {
+    font-size: 1.8rem;
+  }
+  h3 {
+    font-size: 1.6rem;
   }
 }
 main.startsida {
@@ -148,6 +166,9 @@ main.startsida section.most-sold-products .product:hover {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   transform: translateY(-0.2rem);
 }
+main.startsida section.most-sold-products .product:hover a p.title {
+  text-decoration: underline;
+}
 main.startsida section.most-sold-products a {
   display: flex;
   align-items: center;
@@ -169,6 +190,50 @@ main.startsida section.most-sold-products a p.description {
   margin-top: 0.5rem;
   margin-bottom: 4.5rem;
 }
+main.startsida section.latest-news {
+  margin-bottom: 10rem;
+}
+main.startsida section.latest-news h2 {
+  margin-bottom: 1rem;
+  text-align: center;
+}
+main.startsida section.latest-news p.h2-subheading {
+  margin-bottom: 5rem;
+  text-align: center;
+}
+main.startsida section.latest-news .news {
+  display: grid;
+  row-gap: 3rem;
+  -moz-column-gap: 9rem;
+       column-gap: 9rem;
+  grid-template-columns: repeat(3, 28rem);
+  justify-content: center;
+}
+main.startsida section.latest-news .news article {
+  height: 45rem;
+  background-color: #ffffff;
+  border-radius: 1.5rem;
+  transition: box-shadow 0.25s ease-in-out, transform 0.25s ease-in-out;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
+main.startsida section.latest-news .news article:hover {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  transform: translateY(-0.2rem);
+}
+main.startsida section.latest-news .news article:hover h3 {
+  text-decoration: underline;
+}
+main.startsida section.latest-news .news .content {
+  padding: 2rem 2rem;
+}
+main.startsida section.latest-news .news p.date {
+  color: rgba(33, 33, 33, 0.8);
+  font-size: 1.6rem;
+}
+main.startsida section.latest-news .news h3 {
+  margin-top: 1rem;
+  font-weight: 400;
+}
 
 @media screen and (max-width: 1250px) {
   main.startsida {
@@ -180,12 +245,30 @@ main.startsida section.most-sold-products a p.description {
   main.startsida section.landing-page {
     padding: 0 5rem;
   }
-  main.startsida section.most-sold-products .products {
+  main.startsida section.most-sold-products .products,
+  main.startsida section.latest-news .news {
     -moz-column-gap: calc(15vw - 10rem);
          column-gap: calc(15vw - 10rem);
   }
 }
+@media screen and (max-width: 950px) {
+  main.startsida section.latest-news .news {
+    grid-template-columns: repeat(2, 28rem);
+    -moz-column-gap: calc(10vw - 5rem);
+         column-gap: calc(10vw - 5rem);
+  }
+}
 @media screen and (max-width: 840px) {
+  main.startsida section.most-sold-products .products {
+    grid-template-columns: repeat(2, 25rem);
+    -moz-column-gap: calc(10vw - 5rem);
+         column-gap: calc(10vw - 5rem);
+  }
+}
+@media screen and (max-width: 600px) {
+  main.startsida section.latest-news .news {
+    grid-template-columns: repeat(1, 28rem);
+  }
   main.startsida section.most-sold-products .products {
     grid-template-columns: repeat(1, 25rem);
   }
@@ -209,6 +292,15 @@ main.startsida section.most-sold-products a p.description {
   }
   main.startsida section.most-sold-products a p.country {
     font-size: 1.4rem;
+  }
+  main.startsida section.latest-news .news p.date {
+    font-size: 1.4rem;
+  }
+  main.startsida section.latest-news .news {
+    grid-template-columns: repeat(1, 21.8rem);
+  }
+  main.startsida section.latest-news .news article {
+    height: 35rem;
   }
 }
 @media screen and (max-width: 390px) {
