--- a/style/style.scss
+++ b/style/style.scss
@@ -1,4 +1,6 @@
 @import "global";
-@import "homepage";
 @import "header";
+@import "banner";
 @import "footer";
+@import "omVinbolaget";
+@import "homepage";
